Backend/Server/k8s/identity-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: identity
  labels: 
    app: identity
  namespace: organizator-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: identity
  template:
    metadata:
      labels:
        app: identity
    spec:
      containers:
        - image: identity:v0.1.0
          name: identity
          # This is only informative, the executable decides the ports
          ports:
            - containerPort: 8080
              name: "http"
            - containerPort: 8081
              name: "metrics"
          volumeMounts:
            - name: config
              mountPath: /settings.toml
              subPath: settings.toml
              readOnly: true
      volumes:
        - name: config
          configMap:
            name: identity
