Backend/Server/k8s/hyper-organizator-service.yml
apiVersion: v1
kind: Service
metadata:
  name: hyper-organizator
spec:
  selector:
    app: hyper-organizator
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
