Backend/Server/k8s/identity-service.yml
apiVersion: v1
kind: Service
metadata:
  name: identity
spec:
  selector:
    app: identity
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
