Backend/Server/k8s/hyper-organizator-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hyper-organizator-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    #nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: k8s.organizator.ro
      http:
        paths:
          - path: /(login|password)
            pathType: Exact
            backend:
              service:
                name: identity
                port:
                  number: 80
